--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,9 +46,9 @@
         android:theme="@style/Theme.Example.Leanback" >
         <activity
             android:name=".ui.MainActivity"
-            android:icon="@drawable/videos_by_google_banner"
+            android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
-            android:logo="@drawable/videos_by_google_banner"
+            android:logo="@drawable/ic_launcher"
             android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
